--- a/README.rdoc
+++ b/README.rdoc
@@ -29,16 +29,17 @@ Please feel free to use a different markup language if you do not plan to run
 
 I have changed bootstrap alerts with sweet alert.
 
-Bootstrap alerts code in <tt>/layouts/application.html.erb</tt> :
+Bootstrap alerts code in <tt>/layouts/application.html.erb</tt>:
+
 	<% flash.each do |name, msg| %>
-		<div class="container" id="alertas">
-			<% if msg.is_a?(String) %>
-				<div class="alert alert-<%= name.to_s == "notice" ? "success" : "danger" %> alert-dismissable", role: "alert" >
-				<button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
-				<%= content_tag :div, msg, :id => "flash_#{name}" %>
-				</div>
-			<% end %>
-		</div>
+	|	<div class="container" id="alertas">
+	|		|<% if msg.is_a?(String) %>
+	|		||	<div class="alert alert-<%= name.to_s == "notice" ? "success" : "danger" %> alert-dismissable", role: "alert" >
+	|		||	<button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
+	|		||	<%= content_tag :div, msg, :id => "flash_#{name}" %>
+	|		||	</div>
+	|		|<% end %>
+	|	</div>
 	<% end %>
 
 I changed it for:
